Update plot and tex

--- a/Tex/Recommendation_for_Airbnb.tex
+++ b/Tex/Recommendation_for_Airbnb.tex
@@ -289,6 +289,42 @@ When comes to average review scores, most of countries get over score of 90. BM,
 \section{Proposed Algorithmic Approach}
 Using collaborative filtering to aggregate the similar users based on their first booking on Airbnb. The similarity between users is measured by cosine of the angle between the two vectors which indicate users? properties. Dimensionality reduction should be applied to reduce computational complexity and speed up the algorithm.
 
+\subsection{Data preprocess}
+
+\begin{table}[!htb]
+\centering
+\caption{Data Preprocess}
+\label{table:preprocess}
+\begin{tabular}{|c|c|l|} \hline
+Processed Attribute & Description\\ \hline
+Time between Account Created \& First Booking &  \\ \hline
+Time between First Active \& First Booking &  \\ \hline
+Age &  \\ \hline
+Others & Original value \\
+\hline\end{tabular}
+\end{table}
+
+
+\subsection{Basic and Ensemble Classifiers}
+
+\begin{figure}
+\centering
+\includegraphics[height=2in, width=3in]{Basic_Classifiers}
+\caption{Error Rates for Basic Classifier}
+\label{fig:basic classifier}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[height=2in, width=3in]{Ensemble_Classifiers}
+\caption{Error Rates for Ensemble Classifier}
+\label{fig:ensemble classifier}
+\end{figure}
+
+\subsection{Collaborative Filtering}
+
+\section{Conclusion}
+
 \medskip
 
 \begin{thebibliography}{9}
