Add PCA figure to Tex

--- a/Tex/Recommendation_for_Airbnb.tex
+++ b/Tex/Recommendation_for_Airbnb.tex
@@ -309,6 +309,13 @@ Others & Original value \\
 \label{fig:ensemble classifier}
 \end{figure}
 
+\begin{figure}
+\centering
+\includegraphics[height=2in,width=3in]{PCA_Classifiers}
+\caption{PCA with Classifiers}
+\label{fig:pca}
+\end{figure}
+
 \subsection{Collaborative Filtering}
 
 \begin{table}[!htb]
